--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=spring-boot-graphql
+spring.application.name=graphqpl
+spring.graphql.graphiql.enabled=true
+spring.graphql.path=/graphql
+spring.graphql.cors.allowed-origins=http://localhost:3000
+server.port=9090
