--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=graphqpl
-spring.graphql.graphiql.enabled=true
-spring.graphql.path=/graphql
-spring.graphql.cors.allowed-origins=http://localhost:3000
 server.port=9090
+spring.graphql.graphiql.enabled=true
+spring.graphql.path=/api/graphql
+spring.graphql.cors.allowed-origins=http://localhost:3000
